tests/error/complex_too_big.gw
#! [contains] extraneous component of complex value
 complex(0,0,0,0);
